force-app/main/default/objects/Touch_Topic__c/Touch_Topic__c.object-meta.xml
<CustomObject>
    <label>Touch Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Touch Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>