force-app/main/default/objects/Touch_Topic__c/fields/External_Code__c.field-meta.xml
<CustomField>
    <fullName>External_Code__c</fullName>
    <externalId>true</externalId>
    <label>External Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>