force-app/main/default/objects/Touch_Topic__c/fields/Parent_Topic__c.field-meta.xml
<CustomField>
    <fullName>Parent_Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Topic</label>
    <referenceTo>Touch_Topic__c</referenceTo>
    <relationshipLabel>Child Topics</relationshipLabel>
    <relationshipName>Child_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>